syntax = "proto3";
package news;

message News {
	string id = 1;
	string title = 2;
	string description = 3;
	string h1 = 4;
	string text = 5;
	bool published = 6;
	string userId = 7;
	bytes createdAt = 8;
	bytes updatedAt = 9;
}

message PostNewsRequest {
	string title = 1;
	string description = 2;
	string h1 = 3;
	string text = 4;
	bool published = 5;
	string userId = 6;
}

message PostNewsResponse {
	News news = 1;
}

message GetNewsRequest {
	string id = 1;
}

message GetNewsResponse {
	News news = 1;
}

message GetNewsForUserRequest {
	string userId = 1;
}

message GetNewsForUserResponse {
	repeated News news = 1;
}

service NewsService {
	rpc PostNews (PostNewsRequest) returns (PostNewsResponse) {}
	rpc GetNews (GetNewsRequest) returns (GetNewsResponse) {}
	rpc GetNewsForUser (GetNewsForUserRequest) returns (GetNewsForUserResponse) {}
}